@@ -1,5 +1,5 @@
 ## Interface: 90002
-## Version: 1.3.4
+## Version: 1.3.5
 ## Title: EasyDestroy
 ## Notes: Makes disenchanting easy!
 ## Author: C.W.A.Grant
